# grafix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  demo.cpp  demo.main.cpp
data/: .gitignore
data/materials/: phong.mat
include/glad/: glad.h
include/imgui/: CMakeLists.txt
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/src/core/: circular_write_buffer.hpp  clock.cpp  clock.hpp  controls.cpp  controls.hpp  image.cpp  model.cpp  model.hpp  mouse.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
libs/orc/: CMakeLists.txt
libs/orc/examples/: basic_usage.cpp
libs/orc/src/orc/: camera.cpp  camera.hpp  camera.test.cpp  cube.cpp  cube.hpp  cubemap.cpp  cubemap.hpp  image.cpp  image.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  node.cpp  node.hpp  node.test.cpp  obj.cpp  obj.hpp  object.cpp  object.hpp  regular.cpp  regular.hpp  scene.cpp  scene.hpp  scene.test.cpp  scene_graph.cpp  scene_graph.hpp  scene_graph.test.cpp  shader.cpp  shader.hpp  shader.test.cpp  skybox.cpp  skybox.hpp  stateful_visitor.cpp  stateful_visitor.hpp  texture.cpp  texture.hpp  texture_2d.cpp  (+7 more)
libs/orc/src/orc/shaders/: light.frag.cpp  light.frag.hpp  light.vert.cpp  light.vert.hpp  monochrome.frag  monochrome.frag.cpp  monochrome.frag.hpp  monochrome.vert  monochrome.vert.cpp  monochrome.vert.hpp  object.frag  object.frag.cpp  object.frag.hpp  object.vert.cpp  object.vert.hpp  phong.frag  phong.frag.cpp  phong.frag.hpp  phong.vert  phong.vert.cpp  phong.vert.hpp  regular.frag.cpp  regular.frag.hpp  regular.vert  regular.vert.cpp  regular.vert.hpp  skybox.frag  skybox.frag.cpp  skybox.frag.hpp  skybox.vert  skybox.vert.cpp  skybox.vert.hpp
libs/orc/test/: main.cpp
libs/slim/: CMakeLists.txt
libs/slim/src/slim/: alphabet.cpp  alphabet.hpp  alphabet.test.cpp  ast.cpp  ast.hpp  automaton.cpp  automaton.hpp  automaton.test.cpp  dfa.cpp  dfa.hpp  dfa.test.cpp  lexer.cpp  lexer.hpp  lexer.test.cpp  nfa.cpp  nfa.hpp  nfa.test.cpp  operators.cpp  operators.hpp  parser.cpp  parser.hpp  parser.test.cpp  regex.cpp  regex.hpp  regex.test.cpp  slim.grammar  slim.pseudo  tokens.cpp  tokens.hpp  typecheck.cpp  typecheck.hpp  typecheck.test.cpp  types.cpp  types.hpp  types.test.cpp  utf8.hpp  utf8.test.cpp
libs/slim/test/parse/pass/: kitchen_sink.shader
libs/slim/test/typecheck/fail/: argument_number.shader  argument_type.shader  arithmetic_mismatch.shader  assignment_mismatch.shader  boolean_expression.shader  call_not_callable.shader  conversion_mismatch.shader  duplicate_declaration.shader  index_non_integer.shader  index_not_indexable.shader  initializer_mismatch.shader  return_type_mismatch.shader  swizzle_length.shader  swizzle_mask.shader  swizzle_range.shader  undeclared_symbol.shader
libs/slim/test/typecheck/pass/: kitchen_sink.shader
libs/testutils/: CMakeLists.txt
libs/testutils/src/testutils/: dirgen.cpp  dirgen.hpp  glm.cpp  glm.hpp
src/: CMakeLists.txt  camera.cpp  camera.hpp  circular_write_buffer.hpp  clock.cpp  clock.hpp  controls.cpp  controls.hpp  history_map.hpp  image.hpp  main.cpp  model.cpp  mouse.cpp  mouse.hpp  point_light.cpp  point_light.hpp  rectangle.cpp  rectangle.hpp  shader.cpp  shader.hpp  shaders.cpp  shaders.hpp  triangle.cpp  triangle.hpp
src/glad/: glad.c
src/shaders/: light.frag  light.vert  obj.frag  obj.vert  shader.frag  shader.vert
tools/: CMakeLists.txt
tools/binembed/: CMakeLists.txt  main.cpp
